testsuite/tests/rename/should_fail/T2901.stderr

T2901.hs:6:5: error: Not in scope: data constructor ‘F.Foo’

T2901.hs:6:13: error: Not in scope: ‘F.field’
